Avoid oversized layers to make HTML elements selectable in dev tools
Some layers had their width and height set to 100% such that it was
impossible to select HTML elements in lower layers via the dev tools'
element selector since the upper full-size layers did always cover them.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,12 +28,10 @@ body {
   overflow: hidden;
 }
 
-.fill {
+.abs-top-left {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .hidden {
